updated modile menu header fix screen width and menu issue on mobile view

--- a/src/pages/HomePage/components/MobileMenu.module.css
+++ b/src/pages/HomePage/components/MobileMenu.module.css
@@ -2,15 +2,15 @@
 .headerBar {
     display: flex;
     flex-direction: row;
-    width: 99vw;
+    width: 100%;
     height: 6vh;
     font-weight: bold;
     font-size: 18px;
 }
 
 .hamburgerButton {
-    height: 6vh;
-    width: 11%;
+    height: 60px;
+    width: 60px;
     border-style: none;
     
 }
@@ -29,7 +29,7 @@
     background-color: black;
     position: fixed;
     width: 100vw;
-    height: 60vh;
+    height:75vh;
     z-index: 100;
     top: 6vh;
     right: 0;
